# ChessAnalytics

./: .cursorignore  .gitignore  LICENSE.md  README.md  count.js  eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
.cursor/rules/: bugfix.mdc  file-header.mdc  fsd-architecture.mdc  git.mdc  global.mdc  ipc-typescript.mdc  rust-commands.mdc  vue-components.mdc  vuetify-ui.mdc
docs/: pending-metadata-updates.md
src/: main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/resources/: benchmarks.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/clients/: lichess.rs
src-tauri/src/commands/: engine.rs  games.rs  mod.rs  player_profile.rs  versus.rs
src-tauri/src/db/game_analyses/: repository.rs
src-tauri/src/db/games/: repository.rs
src-tauri/src/db/users/: model.rs  repository.rs  schema.rs
src-tauri/src/services/: benchmarks.rs  games.rs  mod.rs  player_profile.rs  users.rs  versus.rs  versus_metrics.rs
src-tauri/src/services/engine/: stockfish.rs
src-tauri/src/services/game_analysis/: classifier.rs  service.rs
src-tauri/src/services/insights/: service.rs
src-tauri/src/services/insights/generators/: blunder_moments.rs  blunder_patterns.rs  mod.rs  openings.rs  opponent_rating.rs  psychology.rs  tactics_analysis.rs  time_controls.rs
src-tauri/src/services/versus/: compare.rs  game_plan.rs  mod.rs  openings.rs  progress.rs  side_summary.rs  speed.rs  types.rs
src/app/: App.vue
src/app/init/: index.ts  initApp.ts  initTheme.ts  removePreloader.ts  useGamesAutoSync.ts
src/entities/board/: index.ts
(+161 files in other folders)
