[package]
name = "chessanalytics"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "chessanalytics_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.13.3", features = ["json"] }
rusqlite = { version = "0.31", features = ["bundled"] }
tauri-plugin-keyring = "0.1.0"
tauri-plugin-store = "2.4.2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt"] }
chrono = "0.4.44"
once_cell = "1.21.4"
